--- a/_output.yml
+++ b/_output.yml
@@ -1,8 +1,8 @@
 bookdown::gitbook:
-  # includes:
-  #   in_header: html/in_header.html
-  #   after_body: html/after_body.html
-  # css: [css/style.css]
+  includes:
+    in_header: html/in_header.html
+    after_body: html/after_body.html
+  css: [css/style.css]
   config:
     toc:
       depth: 1
@@ -12,24 +12,11 @@ bookdown::gitbook:
       after: |
         <li><a href="https://github.com/tereom/fundamentos-2025" target="blank">Publicado con bookdown</a></li>
     edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
-    download: ["Rmd"]
+    download: ["pdf"]
     sharing:
       github: yes
       facebook: no
       twitter: no
-  includes:
-    in_header: html/in_header.html
 # bookdown::pdf_book:
-#   includes:
-#     in_header: latex/preamble.tex
-#     before_body: latex/before_body.tex
-#     after_body: latex/after_body.tex
-#   keep_tex: yes
-#   dev: "cairo_pdf"
-#   latex_engine: pdflatex
-#   citation_package: natbib
-#   pandoc_args: --top-level-division=chapter
-#   toc_depth: 3
-#   toc_unnumbered: yes
-#   toc_appendix: yes
+#   latex_engine: xelatex
 # bookdown::epub_book: default
